--- a/css/shepherd-theme-arrows.css
+++ b/css/shepherd-theme-arrows.css
@@ -13,6 +13,7 @@
   max-width: 100%;
   max-height: 100%; }
   .shepherd-element.shepherd-theme-arrows .shepherd-content {
+    z-index: 200;
     -webkit-border-radius: 5px;
     -moz-border-radius: 5px;
     -ms-border-radius: 5px;
